tests/integration/snapshots/integration__conformance__n_structure_open_object_comma.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{,
stdout ---

stderr ---
error: expected entry or closed delimiter `}`, found `,`
 --> stdin:1:2
  |
1 | {,
  | -^
  | |
  | expected due to `{`
