tests/integration/snapshots/integration__conformance__n_structure_open_object_open_string.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{"a
stdout ---

stderr ---
error: expected closing quote
 --> stdin:1:3
  |
1 | {"a
  |  -^
  |  |
  |  opening quote found here
  |
help: insert the missing closing quote
  |
1 | {"a"
  |    +
